# veyron-sdk-cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/: echo_plugin.cpp
fuzz/: fuzz_framing.cpp
include/veyron/: client.hpp  env.hpp  framing.hpp  mac.hpp  plugin.hpp
src/: client.cpp  env.cpp  framing.cpp  mac.cpp
tests/: test_client.cpp  test_env.cpp  test_fragmentation.cpp  test_framing.cpp  test_framing_timeout.cpp  test_mac.cpp  test_plugin.cpp  test_plugin_ping.cpp  test_publish_event.cpp  test_send_action.cpp  test_session_close.cpp
